4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  rules:
  - host: my-webapp.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webapp-service
            port:
              number: 80
      - pathType: Prefix
        path: /pod_id
        backend:
          service:
            name: webapp-service
            port:
              number: 80
